# vscode-python-environments

./: .gitignore  .vscode-test.mjs  CONTRIBUTING.md  MANUAL_TEST_RESULTS.md  README.md  SETTINGS_ARCHITECTURE.md  package-lock.json  package.json  package.nls.json  pep723_design_questions.md  test-glob.js  test-glob2.js  tsconfig.json  vscode-profile-2026-06-11-14-40-56.cpuprofile  webpack.config.js
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/ISSUE_TEMPLATE/: bug-report.md
analysis/: complexity_analysis.py  debt_indicators.py  dependency_analysis.py  git_analysis.py  pyproject.toml  snapshot.py
analysis/kusto/: 00-telemetry-validation.kql  01-failure-stage-breakdown.kql  02-error-type-x-failure-stage.kql  02-manager-availability.kql  03-daily-trend.kql  03-failure-stage-daily-trend.kql  04-overall-setup-success-rate.kql  05-hang-failure-correlation.kql  06-weekly-health-summary.kql  07-error-type-distribution.kql  dashboard.ipynb  initialize.py  query_runner.py  requirements.txt
api/: .gitignore  CHANGELOG.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
docs/: automatic-package-refresh.md  design.md  e2e-tests.md  integration-tests.md  managing-python-projects.md  pipenv-integration.md  pipenv-manager.md  pyenv-manager.md  search-paths-and-glob-patterns.md  smoke-tests.md  startup-flow.md  test-types-comparison.md
examples/: README.md
pythonEnvironmentsApi/: .npmignore  README.md  package-lock.json  package.json
scripts/: compare_package_versions.py
src/: api.ts  copilotTools.test.ts  copilotTools.ts  extension.ts  helpers.ts  internal.api.ts  vscode.proposed.taskExecutionTerminal.d.ts
src/features/creators/templates/newPackageTemplate/: .gitignore  README.md  pyproject.toml
src/features/creators/templates/newPackageTemplate/.github/: copilot-instructions.md
src/features/creators/templates/newPackageTemplate/package_name/: __main__.py
(+425 files in other folders)
