[project]
name = "package_name"
version = "1.0.0"
description = TODO: Add a short description of your package
readme = "README.md"

requires-python = ">=3.8"

[project.optional-dependencies]
dev-requirements = {file = "dev-requirements.txt"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"







